--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
 <head>
     <meta charset="utf-8" />
-    <title>Real-Time Earthquake Monitoring</title>
+    <title>リアルタイム地震モニタリング</title>
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="favicon.ico">
     <style>
@@ -18,20 +18,19 @@
             width: 100%;
             height: 100%;
         }
-        .real-time-frame {
+        .real-time-image {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            border: none;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="https://smi.lmoniexp.bosai.go.jp/data/map_img/CommonImg/base_map_b.gif" class="base-map" alt="Base Map">
-        <iframe id="realTimeImageFrame" class="real-time-frame"></iframe>
+        <img src="https://smi.lmoniexp.bosai.go.jp/data/map_img/CommonImg/base_map_b.gif" class="base-map" alt="ベースマップ">
+        <img id="realTimeImage" class="real-time-image" alt="リアルタイム画像">
     </div>
 
     <script>
@@ -40,7 +39,7 @@
         }
 
         function updateImage() {
-            // Get the current time and subtract 1.1 seconds
+            // 現在時刻を取得し、1.1秒減算
             const now = new Date(Date.now() - 1100);
 
             const year = now.getFullYear();
@@ -55,25 +54,25 @@
 
             const url = `https://smi.lmoniexp.bosai.go.jp/data/map_img/RealTimeImg/jma_s/${datePart}/${datePart}${timePart}.jma_s.gif`;
 
-            // Set the URL to the iframe's src attribute
-            const iframe = document.getElementById('realTimeImageFrame');
-            iframe.src = url;
+            // URLをimgタグのsrc属性に設定
+            const img = document.getElementById('realTimeImage');
+            img.src = url;
 
-            // Check for iframe loading errors
-            iframe.onerror = function() {
-                console.error(`Failed to load image from URL: ${url}`);
+            // imgタグの読み込みエラーをチェック
+            img.onerror = function() {
+                console.error(`URLから画像の読み込みに失敗しました: ${url}`);
             };
 
-            // Log a message when the iframe loads successfully
-            iframe.onload = function() {
-                console.log(`Successfully loaded image from URL: ${url}`);
+            // imgタグの読み込み成功時にメッセージをログ
+            img.onload = function() {
+                console.log(`URLから画像を正常に読み込みました: ${url}`);
             };
         }
 
-        // Initial execution
+        // 初回実行
         updateImage();
 
-        // Execute updateImage every second
+        // 1秒ごとにupdateImageを実行
         setInterval(updateImage, 1000);
     </script>
 </body>
