--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
 <head>
     <meta charset="utf-8" />
-    <title>Real-Time Earthquake Monitoring</title>
+    <title>リアルタイム地震モニタリング</title>
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="favicon.ico">
     <style>
@@ -32,7 +32,7 @@
         }
 
         function updateImage() {
-            // Get the current time and subtract 1.1 seconds
+            // 現在の時刻を取得し、1.1秒引く
             const now = new Date(Date.now() - 1100);
 
             const year = now.getFullYear();
@@ -47,26 +47,27 @@
 
             const url = `https://smi.lmoniexp.bosai.go.jp/data/map_img/RealTimeImg/jma_s/${datePart}/${datePart}${timePart}.jma_s.gif`;
 
-            // Set the URL to the iframe's src attribute
+            // iframeにURLをセット
             const iframe = document.getElementById('realTimeImageFrame');
             iframe.src = url;
 
-            // Check for iframe loading errors
-            iframe.onerror = function() {
-                console.error(`Failed to load image from URL: ${url}`);
+            // 初回ロードが成功したら更新を停止
+            iframe.onload = function() {
+                clearInterval(updateInterval);
+                console.log(`画像を固定しました：${url}`);
             };
 
-            // Log a message when the iframe loads successfully
-            iframe.onload = function() {
-                console.log(`Successfully loaded image from URL: ${url}`);
+            // 画像のロードに失敗した場合の処理
+            iframe.onerror = function() {
+                console.error(`画像のロードに失敗しました：${url}`);
             };
         }
 
-        // Initial execution
+        // 初回の実行
         updateImage();
 
-        // Execute updateImage every second
-        setInterval(updateImage, 1000);
+        // 1秒ごとにupdateImageを実行
+        const updateInterval = setInterval(updateImage, 1000);
     </script>
 </body>
 </html>
