--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
             width: 352px;
             height: 400px;
         }
-        .real-time-frame, .fixed-image {
+        .fixed-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+        .real-time-frame {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
             border: none;
+            z-index: 2;
         }
     </style>
 </head>
