--- a/index.html
+++ b/index.html
@@ -10,30 +10,21 @@
             position: relative;
             width: 352px;
             height: 400px;
-        }
-        .fixed-image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
+            background-image: url('https://smi.lmoniexp.bosai.go.jp/data/map_img/CommonImg/base_map_b.gif');
+            background-size: cover;
         }
         .real-time-frame {
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            width: 352px;
+            height: 400px;
             border: none;
-            z-index: 2;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <!-- 指定された固定画像 -->
-        <img id="fixedImage" class="fixed-image" src="https://smi.lmoniexp.bosai.go.jp/data/map_img/CommonImg/base_map_b.gif" alt="Fixed Image">
         <!-- リアルタイムの画像 -->
         <iframe id="realTimeImageFrame" class="real-time-frame"></iframe>
     </div>
