--- a/index.html
+++ b/index.html
@@ -10,23 +10,28 @@
             position: relative;
             width: 352px;
             height: 400px;
-            background-image: url('https://smi.lmoniexp.bosai.go.jp/data/map_img/CommonImg/base_map_b.gif');
-            background-size: cover;
         }
-        .real-time-frame {
+        .fixed-image, .real-time-image {
             position: absolute;
             top: 0;
             left: 0;
-            width: 352px;
-            height: 400px;
-            border: none;
+            width: 100%;
+            height: 100%;
+        }
+        .real-time-image {
+            z-index: 1;
+        }
+        .fixed-image {
+            z-index: 0;
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <!-- 指定された固定画像 -->
+        <img id="fixedImage" class="fixed-image" src="https://smi.lmoniexp.bosai.go.jp/data/map_img/CommonImg/base_map_b.gif" alt="Fixed Image">
         <!-- リアルタイムの画像 -->
-        <iframe id="realTimeImageFrame" class="real-time-frame"></iframe>
+        <img id="realTimeImage" class="real-time-image" alt="Real-Time Image">
     </div>
 
     <script>
@@ -50,18 +55,18 @@
 
             const url = `https://smi.lmoniexp.bosai.go.jp/data/map_img/RealTimeImg/jma_s/${datePart}/${datePart}${timePart}.jma_s.gif`;
 
-            // iframeにURLをセット
-            const iframe = document.getElementById('realTimeImageFrame');
-            iframe.src = url;
+            // リアルタイム画像のURLをセット
+            const realTimeImage = document.getElementById('realTimeImage');
+            realTimeImage.src = url;
 
             // 初回ロードが成功したら更新を停止
-            iframe.onload = function() {
+            realTimeImage.onload = function() {
                 clearInterval(updateInterval);
                 console.log(`画像を固定しました：${url}`);
             };
 
             // 画像のロードに失敗した場合の処理
-            iframe.onerror = function() {
+            realTimeImage.onerror = function() {
                 console.error(`画像のロードに失敗しました：${url}`);
             };
         }
