--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         html, body {
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow: hidden; /* スクロール防止 */
             width: 100%;
             height: 100%;
         }
