--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             position: relative;
             width: 352px;
             height: 400px;
+            margin: 10px; /* 左と上に少し隙間を開ける */
         }
         .fixed-image, .real-time-image {
             position: absolute;
