--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         html, body {
             margin: 0;
             padding: 0;
-            overflow: hidden; /* スクロール防止 */
+            overflow: hidden; /* Prevent scrolling */
             width: 100%;
             height: 100%;
         }
@@ -17,7 +17,7 @@
             position: relative;
             width: 352px;
             height: 400px;
-            margin: 10px; /* 左と上に少し隙間を開ける */
+            margin: 10px; /* Add a small gap on the left and top */
         }
         .fixed-image, .real-time-image {
             position: absolute;
@@ -36,21 +36,25 @@
 </head>
 <body>
     <div class="container">
-        <!-- 指定された固定画像 -->
+        <!-- Fixed base map image -->
         <img id="fixedImage" class="fixed-image" src="https://smi.lmoniexp.bosai.go.jp/data/map_img/CommonImg/base_map_b.gif" alt="Fixed Image">
-        <!-- リアルタイムの画像 -->
+        <!-- Real-time earthquake monitoring image -->
         <img id="realTimeImage" class="real-time-image" alt="Real-Time Image">
     </div>
 
     <script>
+        // Function to pad single digits with a leading zero
         function pad(number) {
             return number < 10 ? '0' + number : number;
         }
 
+        // Function to update the real-time image
         function updateImage() {
-            // 現在の時刻を取得し、1.1秒引く
-            const now = new Date(Date.now() - 1100);
+            // Get the current time and subtract 1 second
+            const now = new Date();
+            now.setSeconds(now.getSeconds() - 1);
 
+            // Extract year, month, day, hours, minutes, and seconds
             const year = now.getFullYear();
             const month = pad(now.getMonth() + 1);
             const day = pad(now.getDate());
@@ -58,32 +62,28 @@
             const minutes = pad(now.getMinutes());
             const seconds = pad(now.getSeconds());
 
+            // Create date and time strings in the format expected by the server
             const datePart = `${year}${month}${day}`;
             const timePart = `${hours}${minutes}${seconds}`;
 
+            // Construct the URL for the real-time image
             const url = `https://smi.lmoniexp.bosai.go.jp/data/map_img/RealTimeImg/jma_s/${datePart}/${datePart}${timePart}.jma_s.gif`;
 
-            // リアルタイム画像のURLをセット
+            // Set the src attribute of the real-time image
             const realTimeImage = document.getElementById('realTimeImage');
             realTimeImage.src = url;
 
-            // 初回ロードが成功したら更新を停止
-            realTimeImage.onload = function() {
-                clearInterval(updateInterval);
-                console.log(`画像を固定しました：${url}`);
-            };
-
-            // 画像のロードに失敗した場合の処理
+            // Handle errors if the image fails to load
             realTimeImage.onerror = function() {
-                console.error(`画像のロードに失敗しました：${url}`);
+                console.error(`Failed to load image: ${url}`);
             };
         }
 
-        // 初回の実行
+        // Initial execution
         updateImage();
 
-        // 1秒ごとにupdateImageを実行
-        const updateInterval = setInterval(updateImage, 1000);
+        // Execute updateImage every second
+        setInterval(updateImage, 1000);
     </script>
 </body>
 </html>
