--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         }
         .real-time-image {
             z-index: 1;
+            visibility: hidden; /* 初期状態で非表示にする */
         }
         .fixed-image {
             z-index: 0;
@@ -74,9 +75,11 @@
             tempImage.onload = function() {
                 const realTimeImage = document.getElementById('realTimeImage');
                 realTimeImage.src = url;
+                realTimeImage.style.visibility = 'visible'; // 画像が正常にロードされたら表示する
             };
             tempImage.onerror = function() {
                 console.error(`画像の読み込みに失敗しました: ${url}`);
+                setTimeout(updateImage, 1000); // 1秒後に再試行
             };
             tempImage.src = url;
         }
@@ -84,8 +87,8 @@
         // 初回実行
         updateImage();
 
-        // 1秒ごとにupdateImageを実行
-        setInterval(updateImage, 1000);
+        // 0.5秒ごとにupdateImageを実行
+        setInterval(updateImage, 500);
     </script>
 </body>
 </html>
