--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
             return number < 10 ? '0' + number : number;
         }
 
+        let isLoading = false;
+        let retryCount = 0;
+        const maxRetries = 5;
+
         // リアルタイム画像を更新する関数
         function updateImage() {
+            if (isLoading) return;
+            isLoading = true;
+
             // 現在の時間を取得し、2秒を引く
             const now = new Date();
             now.setMilliseconds(now.getMilliseconds() - 2000);
@@ -76,10 +83,17 @@
                 const realTimeImage = document.getElementById('realTimeImage');
                 realTimeImage.src = url;
                 realTimeImage.style.visibility = 'visible'; // 画像が正常にロードされたら表示する
+                retryCount = 0;
+                isLoading = false;
             };
             tempImage.onerror = function() {
                 console.error(`画像の読み込みに失敗しました: ${url}`);
-                setTimeout(updateImage, 1000); // 1秒後に再試行
+                if (retryCount < maxRetries) {
+                    retryCount++;
+                    setTimeout(updateImage, 1000); // 1秒後に再試行
+                } else {
+                    isLoading = false;
+                }
             };
             tempImage.src = url;
         }
