--- a/index.html
+++ b/index.html
@@ -19,19 +19,24 @@
             height: 400px;
             margin: 10px; /* 左と上に小さなギャップを追加 */
         }
-        .fixed-image, .real-time-image {
+        .fixed-image, .real-time-image, .placeholder-image {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
         }
-        .real-time-image {
+        .real-time-image, .placeholder-image {
             z-index: 1;
-            visibility: hidden; /* 初期状態で非表示にする */
         }
         .fixed-image {
             z-index: 0;
+        }
+        .placeholder-image {
+            display: block; /* 初期状態で表示 */
+        }
+        .real-time-image {
+            display: none; /* 初期状態で非表示 */
         }
     </style>
 </head>
@@ -39,8 +44,10 @@
     <div class="container">
         <!-- 固定のベースマップ画像 -->
         <img id="fixedImage" class="fixed-image" src="https://smi.lmoniexp.bosai.go.jp/data/map_img/CommonImg/base_map_b.gif" alt="データを取得できません">
+        <!-- プレースホルダー画像 -->
+        <img id="placeholderImage" class="placeholder-image" src="placeholder.jpg" alt="データを取得できません">
         <!-- リアルタイム地震監視画像 -->
-        <img id="realTimeImage" class="real-time-image" src="placeholder.jpg" alt="データを取得できません">
+        <img id="realTimeImage" class="real-time-image" src="" alt="データを取得できません">
     </div>
 
     <script>
@@ -52,15 +59,16 @@
         let isLoading = false;
         let retryCount = 0;
         const maxRetries = 5;
+        const updateInterval = 100; // 更新間隔を0.1秒に設定
 
         // リアルタイム画像を更新する関数
         function updateImage() {
             if (isLoading) return;
             isLoading = true;
 
-            // 現在の時間を取得し、1秒を引く
+            // 現在の時間を取得し、2秒を引く
             const now = new Date();
-            now.setMilliseconds(now.getMilliseconds() - 1000);
+            now.setMilliseconds(now.getMilliseconds() - 2000);
 
             // 年、月、日、時、分、秒を抽出
             const year = now.getFullYear();
@@ -77,12 +85,18 @@
             // リアルタイム画像のURLを構築
             const url = `https://smi.lmoniexp.bosai.go.jp/data/map_img/RealTimeImg/jma_s/${datePart}/${datePart}${timePart}.jma_s.gif`;
 
+            // プレースホルダー画像を表示
+            const placeholderImage = document.getElementById('placeholderImage');
+            const realTimeImage = document.getElementById('realTimeImage');
+            placeholderImage.style.display = 'block';
+            realTimeImage.style.display = 'none';
+
             // 一時的なImageオブジェクトを使用して画像をプリロード
             const tempImage = new Image();
             tempImage.onload = function() {
-                const realTimeImage = document.getElementById('realTimeImage');
                 realTimeImage.src = url;
-                realTimeImage.style.visibility = 'visible'; // 画像が正常にロードされたら表示する
+                realTimeImage.style.display = 'block'; // 画像が正常にロードされたら表示する
+                placeholderImage.style.display = 'none'; // プレースホルダーを非表示
                 retryCount = 0;
                 isLoading = false;
             };
@@ -90,7 +104,7 @@
                 console.error(`画像の読み込みに失敗しました: ${url}`);
                 retryCount++;
                 if (retryCount < maxRetries) {
-                    setTimeout(updateImage, 500); // 0.5秒後に再試行
+                    setTimeout(updateImage, updateInterval); // リトライ
                 } else {
                     isLoading = false;
                 }
@@ -101,14 +115,14 @@
         // 初回実行
         updateImage();
 
-        // 0.5秒ごとにupdateImageを実行
-        setInterval(updateImage, 500);
+        // 0.1秒ごとにupdateImageを実行
+        setInterval(updateImage, updateInterval);
 
         // 障害が発生した場合にプレースホルダー画像を表示し続ける
         document.getElementById('realTimeImage').onerror = function() {
-            this.style.visibility = 'hidden';
-            this.src = 'placeholder.jpg';
-            this.style.visibility = 'visible';
+            this.style.display = 'none';
+            const placeholderImage = document.getElementById('placeholderImage');
+            placeholderImage.style.display = 'block';
         };
     </script>
 </body>
