--- a/index.html
+++ b/index.html
@@ -1,114 +1,180 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html>
 
 <head>
-    <title>雨雲レーダー</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
-    <script type="text/javascript" src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        html,
-        body,
-        #map {
-            height: 100%;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>地理院地図表示</title>
+  <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" />
+  <link rel="stylesheet" href="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.css" />
+  <script src="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.js"></script>
+  <style>
+    #map {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }
+  </style>
 </head>
 
 <body>
-    <div id="map"></div>
-    <script>
+  <div id="map"></div>
+  <script>
+    class MyControl {
+      constructor() {
+        this.updateTimer = null;
+        this.lastUpdateTime = 0;
+        this.url = null;
+        this.retryCount = 0;
+        this.maxRetries = 3;
+      }
 
-        //非同期で気象庁APIを叩く
-        async function call_api(url) {
-            const request = await fetch(url);
-            const response = await request.json();
-            return response
+      onAdd(map) {
+        this._map = map;
+        this.update();
+        this.updateTimer = setInterval(() => this.update(), 5 * 60 * 1000);
+        return null;
+      }
+
+      async update() {
+        const now = Date.now();
+        if (now - this.lastUpdateTime < 5 * 60 * 1000) return;
+
+        this.lastUpdateTime = now;
+
+        try {
+          const newUrl = await this.fetchNowcastUrl();
+          if (this.url !== newUrl) {
+            this.url = newUrl;
+            this.updateLayer();
+            this.retryCount = 0;
+          }
+        } catch (error) {
+          if (this.retryCount < this.maxRetries) {
+            this.retryCount++;
+            console.warn("Retrying Nowcast URL fetch. Attempt:", this.retryCount);
+            this.update();
+          } else {
+            console.error("Error fetching Nowcast URL: " + error.message);
+            alert("Error fetching Nowcast URL: " + error.message);
+          }
         }
+      }
 
-        const url =
-            "https://www.jma.go.jp/bosai/himawari/data/satimg/targetTimes_jp.json";
-        //非同期チェーン
-        call_api(url).then(function init(time) {
-            const map = new maplibregl.Map({
-                container: 'map',
-                zoom: 5,
-                center: [138, 37],
-                minZoom: 1,
-                maxZoom: 22,
-                //maxBounds: [122, 20, 154, 50],
-                style: {
-                    version: 8,
-                    sources: {
-                        // 背景地図ソース
-                        osm: {
-                            type: 'raster',
-                            tiles: [
-                                'https://a.tile.openstreetmap.org/{z}/{x}/{y}.png',
-                                'https://b.tile.openstreetmap.org/{z}/{x}/{y}.png',
-                            ],
-                            tileSize: 256,
-                            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-                        },
-                    },
-                    layers: [
-                        {
-                            id: 'osm-layer',
-                            source: 'osm',
-                            type: 'raster',
-                            minZoom: 0,
-                            maxZoom: 18,
-                        }
-                    ]
-                }
-            });
+      async fetchNowcastUrl() {
+        try {
+          const res = await fetch("https://www.jma.go.jp/bosai/jmatile/data/nowc/targetTimes_N1.json");
+          if (!res.ok) throw new Error("Network response was not ok");
+          const json = await res.json();
+          if (!json.length) throw new Error("No data found");
+          const basetime = json[0].basetime;
+          const time = json[0].targetTime || basetime;
+          return `https://www.jma.go.jp/bosai/jmatile/data/nowc/${basetime}/none/${time}/surf/hrpns/{z}/{x}/{y}.png`;
+        } catch (error) {
+          throw new Error("Failed to fetch Nowcast URL: " + error.message);
+        }
+      }
 
-            map.on('load', function () {
-                map.addSource(
-                    ' rain_map', {
-                    type: 'raster',
-                    tiles: [
-                        "https://www.jma.go.jp/bosai/jmatile/data/nowc/" +
-                        time[1]["basetime"] +
-                        "/none/" +
-                        time[1]["validtime"] +
-                        "/surf/hrpns/{z}/{x}/{y}.png",
-                    ],
-                    minzoom: 1,
-                    maxzoom: 16,
-                    tileSize: 256,
-                    attribution: "<a href='https://www.jma.go.jp/bosai/nowc/' target='_blank'>雨雲の動き</a>"
-                }
-                );
-                map.addLayer({
-                    id: 'rain_map',
-                    source: 'rain_map',
-                    type: 'raster',
-                    paint: {
-                        'raster-opacity': 0.7
-                    },
-                });
+      updateLayer() {
+        const key = "jma_hrpns";
+        const map = this._map;
+        let source = map.getSource(key);
 
-                // NavigationControl
-                let nc = new maplibregl.NavigationControl();
-                map.addControl(nc, 'top-left');
+        if (!source) {
+          map.addSource(key, {
+            "type": "raster",
+            "tiles": [this.url],
+            "tileSize": 256,
+            "maxzoom": 10,
+            "minzoom": 4,
+            "attribution": "<a href='https://www.jma.go.jp/jma/kishou/know/kurashi/highres_nowcast.html'>気象庁(高解像度降水ナウキャスト)</a>"
+          });
+          map.addLayer({
+            "id": "jma_hrpns",
+            "type": "raster",
+            "source": key,
+            "minzoom": 4,
+            "maxzoom": 18,
+            "paint": {
+              "raster-opacity": 1.0,
+              "raster-resampling": "nearest",
+              "raster-fade-duration": 0
+            }
+          });
+        } else {
+          source.setTiles([this.url]);
+          map.style.sourceCaches[key].clearTiles();
+          map.style.sourceCaches[key].update(map.transform);
+          map.triggerRepaint();
+        }
+      }
 
-                // スケール表示
-                map.addControl(new maplibregl.ScaleControl({
-                    maxWidth: 200,
-                    unit: 'metric'
-                }));
-            });
+      onRemove() {
+        if (this.updateTimer) clearInterval(this.updateTimer);
+        this._map = undefined;
+      }
 
-        });
-    </script>
+      getDefaultPosition() {
+        return 'top-left';
+      }
+    }
+
+    const style = {
+      "version": 8,
+      "sources": {
+        "gsi_base": {
+          "type": "raster",
+          "tiles": [
+            "https://cyberjapandata.gsi.go.jp/xyz/pale/{z}/{x}/{y}.png"
+          ],
+          "tileSize": 256,
+          "attribution": "<a href='https://maps.gsi.go.jp/'>地理院地図</a>"
+        }
+      },
+      "layers": [
+        {
+          "id": "background",
+          "type": "background",
+          "paint": {
+            "background-color": "#ffffff"
+          }
+        },
+        {
+          "id": "gsi_base",
+          "type": "raster",
+          "source": "gsi_base",
+          "minzoom": 0,
+          "maxzoom": 18,
+          "paint": {
+            "raster-saturation": -1
+          }
+        }
+      ]
+    };
+
+    const bounds = [
+      [122.5, 20.0],
+      [153.0, 45.5]
+    ];
+
+    const map = new maplibregl.Map({
+      container: "map",
+      center: [137.7749, 35.6586],
+      zoom: 4,
+      style: style
+    });
+
+    map.on('load', () => {
+      map.setMaxBounds(bounds);
+      map.setMaxZoom(8);
+      map.setMinZoom(4);
+    });
+
+    map.addControl(new maplibregl.FullscreenControl());
+    map.addControl(new MyControl());
+  </script>
 </body>
 
 </html>
-
