--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
   <meta charset="UTF-8">
   <title>地理院地図表示</title>
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width" />
+  <link rel="icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.css" />
   <script src="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.js"></script>
   <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+
     #map {
       position: absolute;
       top: 0;
@@ -54,56 +61,30 @@
     class MyControl {
       constructor() {
         this.updateTimer = null;
-        this.lastUpdateTime = 0;
         this.url = null;
-        this.retryCount = 0;
-        this.maxRetries = 3;
       }
 
       onAdd(map) {
         this._map = map;
         this.update();
-        this.updateTimer = setInterval(() => this.update(), 5 * 60 * 1000);
+        this.updateTimer = setInterval(() => this.update(), 1000); // Update every second
         return null;
       }
 
       async update() {
-        const now = Date.now();
-        if (now - this.lastUpdateTime < 5 * 60 * 1000) return;
-
-        this.lastUpdateTime = now;
-
-        try {
-          const newUrl = await this.fetchNowcastUrl();
-          if (this.url !== newUrl) {
-            this.url = newUrl;
-            this.updateLayer();
-            this.retryCount = 0;
-          }
-        } catch (error) {
-          if (this.retryCount < this.maxRetries) {
-            this.retryCount++;
-            console.warn("Retrying Nowcast URL fetch. Attempt:", this.retryCount);
-            this.update();
-          } else {
-            console.error("Error fetching Nowcast URL: " + error.message);
-            alert("Error fetching Nowcast URL: " + error.message);
-          }
+        const newUrl = await this.fetchNowcastUrl();
+        if (this.url !== newUrl) {
+          this.url = newUrl;
+          this.updateLayer();
         }
       }
 
       async fetchNowcastUrl() {
-        try {
-          const res = await fetch("https://www.jma.go.jp/bosai/jmatile/data/nowc/targetTimes_N1.json");
-          if (!res.ok) throw new Error("Network response was not ok");
-          const json = await res.json();
-          if (!json.length) throw new Error("No data found");
-          const basetime = json[0].basetime;
-          const time = json[0].targetTime || basetime;
-          return `https://www.jma.go.jp/bosai/jmatile/data/nowc/${basetime}/none/${time}/surf/hrpns/{z}/{x}/{y}.png`;
-        } catch (error) {
-          throw new Error("Failed to fetch Nowcast URL: " + error.message);
-        }
+        const res = await fetch("https://www.jma.go.jp/bosai/jmatile/data/nowc/targetTimes_N1.json");
+        const json = await res.json();
+        const basetime = json[0].basetime;
+        const time = json[0].targetTime || basetime;
+        return `https://www.jma.go.jp/bosai/jmatile/data/nowc/${basetime}/none/${time}/surf/hrpns/{z}/{x}/{y}.png`;
       }
 
       updateLayer() {
@@ -212,9 +193,13 @@
       center: [137.7749, 35.6586],
       zoom: 4,
       style: style,
-      pitch: 0,
-      bearing: 0
+      pitch: 0, // 固定ピッチ設定
+      bearing: 0 // 固定ベアリング設定
     });
+
+    // ピッチとベアリングを固定
+    map.on('pitchstart', () => map.setPitch(0));
+    map.on('rotate', () => map.setBearing(0));
 
     map.on('load', () => {
       map.setMaxBounds(bounds);
@@ -222,21 +207,17 @@
       map.setMinZoom(4);
     });
 
-    map.addControl(new maplibregl.FullscreenControl());
     map.addControl(new MyControl());
 
     function onResize() {
-      // Ensure the map container resizes with the viewport
       const mapContainer = document.getElementById('map');
       mapContainer.style.width = `${window.innerWidth}px`;
       mapContainer.style.height = `${window.innerHeight}px`;
-
-      // Trigger a resize event on the map
       map.resize();
     }
 
     window.addEventListener('resize', onResize);
-    onResize(); // Initial call to set the size
+    onResize();
   </script>
 </body>
 
