--- a/index.html
+++ b/index.html
@@ -183,15 +183,16 @@
       }
     };
 
+    // 北海道から鹿児島の範囲をカバーする境界ボックス
     const bounds = [
-      [122.5, 20.0],
-      [153.0, 45.5]
+      [129.5, 31.0], // 鹿児島の南西
+      [145.5, 45.5]  // 北海道の北東
     ];
 
     const map = new maplibregl.Map({
       container: "map",
-      center: [137.7749, 35.6586],
-      zoom: 4,
+      center: [(129.5 + 145.5) / 2, (31.0 + 45.5) / 2], // 初期中心を北海道と鹿児島の間に設定
+      zoom: 5, // 初期ズームレベルを設定
       style: style,
       pitch: 0, // 固定ピッチ設定
       bearing: 0 // 固定ベアリング設定
