--- a/index.html
+++ b/index.html
@@ -183,16 +183,15 @@
       }
     };
 
-    // 北海道から鹿児島の範囲をカバーする境界ボックス
     const bounds = [
-      [129.5, 31.0], // 鹿児島の南西
-      [145.5, 45.5]  // 北海道の北東
+      [120.0, 20.0],  // Expanded western bound
+      [156.0, 50.0]   // Expanded eastern bound
     ];
 
     const map = new maplibregl.Map({
       container: "map",
-      center: [(129.5 + 145.5) / 2, (31.0 + 45.5) / 2], // 初期中心を北海道と鹿児島の間に設定
-      zoom: 5, // 初期ズームレベルを設定
+      center: [137.7749, 35.6586],
+      zoom: 4,
       style: style,
       pitch: 0, // 固定ピッチ設定
       bearing: 0 // 固定ベアリング設定
@@ -204,7 +203,7 @@
 
     map.on('load', () => {
       map.setMaxBounds(bounds);
-      map.setMaxZoom(8);
+      map.setMaxZoom(12);  // Increased max zoom level
       map.setMinZoom(4);
     });
 
